@@ -1,3 +1,15 @@
+2018-11-07  Jonathan Bedard  <jbedard@apple.com>
+
+        Unreviewed, rolling out r237913.
+
+        Breaks running tests on Mac without iOS SDK installed
+
+        Reverted changeset:
+
+        "webkitpy: Generalize trailing SDK specifier (Part 2)"
+        https://bugs.webkit.org/show_bug.cgi?id=191275
+        https://trac.webkit.org/changeset/237913
+
 2018-11-07  Zamiul Haque  <zhaque@apple.com>
 
         Force a gregorian calendar to show for credit card expiration date inputs
